--- a/day5/task/SIgn_up.html
+++ b/day5/task/SIgn_up.html
@@ -110,7 +110,7 @@
             </div>
             <div class="col-md-6 position-relative">
                 <label for="validationTooltip02" class="form-label"></label>
-                <input type="text" class="form-control" id="validationTooltip02" placeholder="Email" required>
+                <input type="email" class="form-control" id="validationTooltip02" placeholder="Email" required>
                 <div class="invalid-tooltip">
                     Please choose a unique and valid Email.
                 </div>
@@ -238,7 +238,7 @@
         <!-- Copyright -->
         <div class="text-center p-3"
              style="background-color: rgba(0, 0, 0, 0.2)">
-            © 2023 Copyright:
+            Â© 2023 Copyright:
             <a class="text-dark" href="https://github.com/MitulRahaman" target="_blank">Mitul Rahman</a>
         </div>
     </footer>
