--- a/day5/task/HomePage.html
+++ b/day5/task/HomePage.html
@@ -30,9 +30,9 @@
                                 Products
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="C:\Users\rahma\OneDrive\Desktop\Appnap_Training\day5\task\Laptop.html">Laptop</a></li>
+                                <li><a class="dropdown-item" href="Laptop.html">Laptop</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="C:\Users\rahma\OneDrive\Desktop\Appnap_Training\day5\task\Desktop.html">Desktop</a></li>
+                                <li><a class="dropdown-item" href="Desktop.html">Desktop</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="C:\Users\rahma\OneDrive\Desktop\Appnap_Training\day5\task\Tablet.html">Tablet</a></li>
                                 <li><hr class="dropdown-divider"></li>
@@ -271,7 +271,7 @@
         <!-- Copyright -->
         <div class="text-center p-3"
              style="background-color: rgba(0, 0, 0, 0.2)">
-            © 2023 Copyright:
+            Â© 2023 Copyright:
             <a class="text-dark" href="https://github.com/MitulRahaman" target="_blank">Mitul Rahman</a>
         </div>
     </footer>
