--- a/day5/task/HomePage.html
+++ b/day5/task/HomePage.html
@@ -22,7 +22,7 @@
                 <div class="collapse navbar-collapse" id="navbarScroll">
                     <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                         <li class="nav-item mx-4">
-                            <a class="nav-link active" aria-current="page" href="C:\Users\rahma\OneDrive\Desktop\Appnap_Training\day5\task\HomePage.html" target="_blank">Home</a>
+                            <a class="nav-link active" aria-current="page" href="HomePage.html" target="_blank">Home</a>
                         </li>
 
                         <li class="nav-item dropdown mx-4">
@@ -34,26 +34,26 @@
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="Desktop.html">Desktop</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="C:\Users\rahma\OneDrive\Desktop\Appnap_Training\day5\task\Tablet.html">Tablet</a></li>
+                                <li><a class="dropdown-item" href="Tablet.html">Tablet</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="C:\Users\rahma\OneDrive\Desktop\Appnap_Training\day5\task\Camera.html">Camera</a></li>
+                                <li><a class="dropdown-item" href="Camera.html">Camera</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="C:\Users\rahma\OneDrive\Desktop\Appnap_Training\day5\task\Phone.html">Phone</a></li>
+                                <li><a class="dropdown-item" href="Phone.html">Phone</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="C:\Users\rahma\OneDrive\Desktop\Appnap_Training\day5\task\Accesories.html">Accesories</a></li>
+                                <li><a class="dropdown-item" href="Accesories.html">Accesories</a></li>
                             </ul>
                         </li>
                         <li class="nav-item mx-4">
                             <a class="nav-link" href="https://www.startech.com.bd/information/offer" target="_blank">Offer</a>
                         </li>
                         <li class="nav-item mx-4">
-                            <a class="nav-link" href="C:/Users/rahma/OneDrive/Desktop/Appnap_Training/day5/task/Refund.html">Refund Policy</a>
+                            <a class="nav-link" href="Refund.html">Refund Policy</a>
                         </li>
                         <li class="nav-item mx-4">
                             <a class="nav-link" href="https://www.startech.com.bd/information/contact" target="_blank">Customer Care</a>
                         </li>
                         <li class="nav-item mx-4">
-                            <a class="nav-link" href="C:\Users\rahma\OneDrive\Desktop\Appnap_Training\day5\task\Sign_up.html">Login/Signup</a>
+                            <a class="nav-link" href="Sign_up.html">Login/Signup</a>
                         </li>
                         <li class="nav-item mx-4">
                             <a class="nav-link" href="https://www.startech.com.bd/emi-terms" target="_blank">EMI Terms</a>
